# retailrag-agent

./: .gitignore  pyproject.toml
Data_CSV/: Budgets.csv
dev/: Test-PostegreSql.ipynb
sql/: 00_reset.sql  01_staging.sql  02_load_csv.sql  03_dimensions.sql  04_facts.sql  99_run_pipeline.sql
src/retailrag_agent/config/: settings.py
